# rust_os

./: Cargo.toml  Note.md  VGA_text_mode.md  commit  kernel_Testing.md  minimal_rust_kernel.md  v2ray.conf  vga_buffer.rs  x86_64-blog_os.json
.cargo/: config.toml
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs
