# Cargo.toml 包含了报的配置,[package]包含了包名,版本号,编译器版本号等,[dependencies]包含项目的依赖包
# src/main.rs文件包含包的根模块和 main 函数.编译使用 cargo build 编译,然后在 target/debug目录找到编译好的二进制文件.
[package]
name = "rust_os"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin="0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device","isa-debug-exit,iobase=0xf4,iosize=0x04","-serial","stdio","-display","none"]
test-success-exit-code = 33 #(0x10<<1)|1